--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5540011768:AAEaRQjr7u9o6RO3l8l_jdeLKfR0BdmAH3I"
-GDRIVE_FOLDER_ID = "0APY9lpG5TlarUk9PVA"
+BOT_TOKEN = "5605328572:AAH85G4YnyrH-FBXwqM3kyNW5XLvvh17wlI"
+GDRIVE_FOLDER_ID = "0APEgly77450rUk9PVA"
 OWNER_ID =5360024749
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
