--- a/config.env
+++ b/config.env
@@ -20,7 +20,7 @@ STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 # Update
-UPSTREAM_REPO = "https://reupmul5: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@github.com/reupmul5/00000"
+UPSTREAM_REPO = "https://mydatabase000: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@github.com/mydatabase000/00000-mir-re-dep"
 UPSTREAM_BRANCH = "h-code"
 # Leech
 TG_SPLIT_SIZE = ""
@@ -28,7 +28,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = "https://volukupow.onrender.com"
+BASE_URL_OF_BOT = "https://casio01.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
