--- a/config.env
+++ b/config.env
@@ -28,7 +28,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = "https://casio01.onrender.com"
+BASE_URL_OF_BOT = "https://casiostanderd01.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
